<resources>
    <string name="app_name">Baumaquip Rental Program</string>
    <string name="baumaschinen">Machines</string>
    <string name="baumaschinenAdd">add machines</string>
    <string name="baumachinenArchived">archived machines</string>
    <string name="baumaschine_name">enter machine</string>
    <string name="baumaschine_amount">enter amount</string>
    <string name="baumaschine_pricePerDay">enter price per day</string>
    <string name="baumaschine_pricePerWeekend">enter price per weekend</string>
    <string name="baumaschine_pricePerMonth">enter price per month</string>
    <string name="baumaschine_operatingHours">enter operating hours</string>
    <string name="baumaschine_degreeOfWear">enter degree of wear</string>
    <string name="baumaschine_amountOfGas">enter amount of gas</string>
    <string name="price_per_day">price per day:</string>
    <string name="price_per_weekend">price per weekend:</string>
    <string name="price_per_month">price per month:</string>
    <string name="amount">amount:</string>
    <string name="operating_hours">operating hours:</string>
    <string name="amount_of_gas">amount of gas:</string>
    <string name="degree_of_wear">degree of wear:</string>
    <string name="not_removable_machine">machine not removable due to dependencies</string>
    <string name="not_removable_customer">customer not removable due to dependencies</string>
    <string name="empty_baumaschine_spinner">please select machine</string>
    <string name="emptyArchivedBaumaschinenRecyclerViewRecyclerView">No archived machines available!</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="machine_already_listed">Machine already present in list!</string>
    <string name="select_machines">Please select machine(s)!</string>
    <string name="select_date">Please select start and end date!</string>
    <string name="currentlyRent">currently rented:</string>

    <!--Kunden Strings-->
    <string name="kunden">Customers</string>
    <string name="kundenAdd">add customers</string>
    <string name="kundenArchived">archived customers</string>
    <string name="kunde_name">enter customer name</string>
    <string name="kunde_telefon_number">enter telephone number</string>
    <string name="kunde_street_name">enter street name</string>
    <string name="kunde_street_number">enter house number</string>
    <string name="kunde_zip">enter zip</string>
    <string name="kunde_location">enter location</string>
    <string name="kunde_construction_side">enter construction side</string>
    <string name="kunde_contact_person">enter name of contact person</string>
    <string name="kunde_email">enter email address</string>
    <string name="street">street: </string>
    <string name="zip">zip: </string>
    <string name="location">city: </string>
    <string name="telefon_number">telefon number: </string>
    <string name="construction_side">construction side: </string>
    <string name="contact_person">contact person: </string>
    <string name="email">email: </string>
    <string name="kunde">customer:</string>
    <string name="empty_kunde_spinner">please select customer</string>
    <string name="emptyArchivedKundenRecyclerViewRecyclerView">No archived customers available!</string>


    <!--Vertrag Strings-->
    <string name="vertraege">Contracts</string>
    <string name="vertraegeAdd">add contract</string>
    <string name="vertraegeArchived">archived contracts</string>
    <string name="vertragDetailsPrice">price:</string>
    <string name="vertragDetailsTotalPrice">sum:</string>
    <string name="vertragDetailsDiscount">discount:</string>
    <string name="vertragDetailsStart">start of contract:</string>
    <string name="vertragDetailsEnd">end of contract:</string>
    <string name="endBeforeBegin">end date cannot be before start date</string>
    <string name="startBefore">start date cannot be before today\'s date</string>
    <string name="vertragId">contract id:</string>
    <string name="emptyArchivedVertraegeRecyclerViewRecyclerView">No archived contracts available</string>
    <string name="vertragIdShowTextView">contract ID:</string>
    <string name="vertragKundeShowTextView">customer:</string>

    <!--Stuecklisteneintrag Strings-->
    <string name="removeStuecklisteneintrag">last machine is not removable, remove contract instead</string>

    <!--Buttons-->
    <string name="button_add">add</string>
    <string name="button_save">save</string>
    <string name="button_save_vertrag">conclude contract</string>

    <!--AlertDialog-->
    <string name="alertDialog">Do you really want to delete this machine? This could lead to significant application failures due to the relation between contract and machines</string>
    <string name="okDialog">Noticed!</string>
    <string name="cancelDialog">Cancel</string>

    <!--AddVertragStrings-->
    <string name="emptyRecyclerView">No machine selected!</string>
    <string name="announceRecyclerView"><b>selected machines</b></string>
    <string name="insurance">insured</string>
    <string name="startDate">start date:</string>
    <string name="endDate">end date:</string>
    <string name="sumOfRent">total:</string>

    <!--ToastMessages-->
    <string name="startDateBeforCurrentDate">Start cannot be in the past!</string>
    <string name="startDateAfterEndDate">Start date must be before end date!</string>

    <!--FragmentString-->
    <string name="emptyBaumaschineRecyclerView">No machine available!</string>
    <string name="emptyKundeRecyclerView">No customer available!</string>
    <string name="emptyContractRecyclerView">No contract available!</string>
    <string name="emptyKundenRecyclerViewRecyclerView">No customer available!</string>
    <string name="emptyVertraegeRecyclerViewRecyclerView">No contracts available!</string>
    <string name="pdf">PDF</string>

    <!--Permissions-->
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>


</resources>