<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Kunde.AddKundenActivity"
    android:padding="40dp">

    <EditText
        android:id="@+id/addKundenName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="text"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addKundenTelefonNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_telefon_number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="text"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenName" />

    <EditText
        android:id="@+id/addKundenEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_email"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenTelefonNumber" />

    <EditText
        android:id="@+id/addKundenStreetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_street_name"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenEmail" />

    <EditText
        android:id="@+id/addKundenStreetNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_street_number"
        android:inputType="text"
        android:layout_marginTop="24dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenStreetName" />

    <EditText
        android:id="@+id/addKundenZip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:layout_marginTop="24dp"
        android:hint="@string/kunde_zip"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenStreetNumber" />

    <EditText
        android:id="@+id/addKundenLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_location"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenZip" />

    <EditText
        android:id="@+id/addKundenConstructionSide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_construction_side"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/addKundenLocation" />
    <!-- TODO ConstructionSide should be a property of contract but not customer -->

    <EditText
        android:id="@+id/addKundenContactPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/kunde_contact_person"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addKundenConstructionSide" />

    <Button
        android:id="@+id/addKundenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addKundenContactPerson" />


</androidx.constraintlayout.widget.ConstraintLayout>