<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#7AFF8C00"
        android:padding="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/baumaquip_main_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textKundeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Bergolz Kinder GmbH" />

            <TextView
                android:id="@+id/textShowKundeLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:text="@string/location"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutKunde"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textKundeLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="500dp"
                android:text="Pausa"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutKunde"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kundenZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="850dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutKunde"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="00000" />

            <TextView
                android:id="@+id/textKundenZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="700dp"
                android:text="@string/zip"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutKunde"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include layout="@layout/modify_delete_buttons" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableConstraintLayoutKunde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textKundeName">

                <TextView
                    android:id="@+id/textShowKundeStreetName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:text="@string/street"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textKundeStreetName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:text="Zum Paradis"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textKundeStreetNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toEndOf="@+id/textKundeStreetName"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5" />

                <TextView
                    android:id="@+id/textShowKundeTelefonNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="350dp"
                    android:layout_weight="1"
                    android:text="@string/telefon_number"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textKundeTelefonNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="500dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0123456789" />

                <TextView
                    android:id="@+id/textShowKundeEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="700dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:layout_weight="1"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textKundeEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:layout_marginStart="850dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="bergholz@gmx.de" />

                <TextView
                    android:id="@+id/textShowKundeConstructionSide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/space_between_text"
                    android:text="@string/construction_side"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textShowKundeStreetName" />


                <TextView
                    android:id="@+id/textKundeConstructionSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="@dimen/space_between_text"
                    android:text="Pausa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textKundeStreetName" />

                <TextView
                    android:id="@+id/textShowContactPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="350dp"

                    android:layout_marginTop="@dimen/space_between_text"
                    android:text="@string/contact_person"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textKundeStreetNumber" />

                <TextView
                    android:id="@+id/textKundeContactPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="500dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textKundeTelefonNumber"
                    tools:text="Klaus Bergholz" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>