<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#7AFF8C00"
        android:padding="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/baumaquip_main_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vertragDetailsBaumaschineName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@sample/baumaschineName" />

            <TextView
                android:id="@+id/textVertragDetailsBaumaschinenAnzahl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:gravity="center"
                android:text="@string/amount"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutVertagDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vertragDetailsBaumaschineAnzahl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="550dp"
                android:gravity="center"
                android:text="@string/amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@+id/expandableConstraintLayoutVertagDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <include layout="@layout/modify_delete_buttons" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableConstraintLayoutVertagDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vertragDetailsBaumaschineName">


                <TextView
                    android:id="@+id/textVertragDetailsOperatingHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:text="@string/operating_hours"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/baumaschineVertragDetailsOperatingHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textVertragDetailsAmountOfGas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="350dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:text="@string/amount_of_gas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/baumschineVertragDetailsAmountOfGas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="550dp"
                    android:layout_marginTop="@dimen/space_between_text_and_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textVertragDetailsDegreeOfWear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/degree_of_wear"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/baumaschineVertragDetailsDegreeOfWear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="40dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>