<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainPageActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/tabLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"
        app:tabPaddingBottom="8dp"
        app:tabPaddingTop="15dp" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-53dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:enabled="true"
        android:stateListAnimator="@null"
        app:backgroundTint="@color/baumaquip_main_color"
        app:elevation="0dp"
        app:icon="@drawable/ic_button_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addBaumaschine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:enabled="true"
        android:stateListAnimator="@null"
        android:text="@string/baumaschinenAdd"
        style="@style/CustomExtendedFloating"
        app:backgroundTint="@color/baumaquip_main_color"
        app:elevation="0dp"
        app:icon="@drawable/ic_baseline_construction_24"
        app:layout_constraintBottom_toTopOf="@+id/fabViewPager"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<TextView
        android:id="@+id/addBaumaschineFabString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="@+id/addBaumaschine"
        app:layout_constraintEnd_toStartOf="@+id/addBaumaschine"
        app:layout_constraintTop_toTopOf="@+id/addBaumaschine" />-->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addKunde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:enabled="true"
        android:stateListAnimator="@null"
        android:text="@string/kundenAdd"
        style="@style/CustomExtendedFloating"
        app:backgroundTint="@color/baumaquip_main_color"
        app:elevation="0dp"
        app:icon="@drawable/ic_baseline_people_alt_24"
        app:layout_constraintBottom_toTopOf="@+id/addBaumaschine"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<TextView
        android:id="@+id/addKundenFabString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/addKunde"
        app:layout_constraintEnd_toStartOf="@+id/addKunde"
        app:layout_constraintTop_toTopOf="@+id/addKunde" />-->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addVertrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:stateListAnimator="@null"
        android:theme="@style/CustomExtendedFloating"
        android:text="@string/vertraegeAdd"
        style="@style/CustomExtendedFloating"
        app:backgroundTint="@color/baumaquip_main_color"
        app:elevation="0dp"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_insert_drive_file_24"
        app:layout_constraintBottom_toTopOf="@+id/addKunde"
        app:layout_constraintEnd_toEndOf="parent" />

    />

    <!--<TextView
        android:id="@+id/addVertragFabString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/addVertrag"
        app:layout_constraintEnd_toStartOf="@+id/addVertrag"
        app:layout_constraintTop_toTopOf="@+id/addVertrag" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

